# problem-space-py

./: .travis.yml  README.md  pyproject.toml
examples/: addition.md  pythagorean.md  work-problem.md
problem_space/: cli.py  core.py  dz3.py
tests/: test_dz3.py  test_problem_space.py
