[tool.poetry]
name = "problem-space"
version = "0.1.0"
description = "Takes a question template, creates questions in the problems space"
authors = ["Christian Murphy <Christian.Murphy.42@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
